--- a/app/src/main/res/layout/activity_panel.xml
+++ b/app/src/main/res/layout/activity_panel.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".panelActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="PANEL"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="50sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="332dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
