--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -30,11 +30,11 @@
         android:textSize="70sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintHorizontal_bias="0.300"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintVertical_bias="0.04" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,37 +73,6 @@
         app:layout_constraintVertical_bias="0.347"
         app:srcCompat="@mipmap/representacion" />
 
-    <ImageButton
-
-        android:id="@+id/btnHome"
-
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@color/black"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/home" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:gravity="center"
-        android:text="⋋🔰⋌ Development by José Martínez ⋋🔰⋌"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.718" />
 
     <TextView
         android:layout_width="160dp"
@@ -122,6 +91,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.565" />
+
+    <ImageButton
+
+        android:id="@+id/btnLogoConect"
+
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/redondo_15dp"
+        android:backgroundTint="#000000"
+        android:backgroundTintMode="add"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.347"
+        app:srcCompat="@mipmap/logo"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
 
@@ -144,21 +132,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.565" />
 
-    <ImageButton
+    <TextView
 
-        android:id="@+id/btnInfo"
+        android:id="@+id/btnInfoAutor"
 
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:background="@color/black"
-        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="112dp"
+        android:gravity="center"
+        android:text="⋋🔰⋌ Development by José Martínez ⋋🔰⋌"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/info" />
+        app:layout_constraintVertical_bias="0.718" />
 
     <View
         android:layout_width="match_parent"
@@ -174,6 +165,24 @@
 
     <ImageButton
 
+        android:id="@+id/btnHome"
+
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@color/black"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.961"
+        app:srcCompat="@mipmap/home"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+
+    <ImageButton
+
         android:id="@+id/btnPanel"
 
         android:layout_width="90dp"
@@ -186,24 +195,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/panel" />
+        app:srcCompat="@mipmap/panel"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageButton
 
-        android:id="@+id/btnLogoConect"
+        android:id="@+id/btnInfo"
 
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#000000"
-        android:backgroundTintMode="add"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@color/black"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintHorizontal_bias="0.931"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347"
-        app:srcCompat="@mipmap/logo" />
+        app:layout_constraintVertical_bias="0.961"
+        app:srcCompat="@mipmap/info"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
